# ComfyUI_HiDiffusion_Pro

./: Hidiffusion_node.py  README.md  __init__.py  example img2img.json  model.yaml  pyproject.toml  requirements.txt
example/: canny.json  controlnet_img2img.json  hidiffusion example.json  inpainting.json  inpaiting.json  ipadapter.json  lightingUnet.json  mistoline.json  new.json  openpose.json  txt2img (1).json  txt2img.json  workflow (1).json
hidiffusion/: hidiffusion.py
ip_adapter/: ip_adapter.py
weights/sdxl/: config.json
weights/sdxl_models/image_encoder/: config.json
