[project]
name = "comfyui_hidiffusion_pro"
description = "A HiDiffusion node for ComfyUI."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/smthemex/ComfyUI_HiDiffusion_Pro"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_HiDiffusion_Pro"
Icon = ""
