[project]
name = "comfyui_hidiffusion_pro"
description = "A HiDiffusion node for ComfyUI."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/smthemex/ComfyUI_HiDiffusion_Pro"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "smthem"
DisplayName = "ComfyUI_HiDiffusion_Pro"
Icon = ""
